--- a/mhfu.item.ini
+++ b/mhfu.item.ini
@@ -541,7 +541,7 @@
 540=
 541=
 542=
-543=
+543=Fire Wyvern Claw
 544=
 545=FireWyvern Fluid
 546=
@@ -555,7 +555,7 @@
 554=
 555=
 556=
-557=
+557=Rathalos Tail
 558=
 559=
 560=
